--- a/assets/css/style-starter.css
+++ b/assets/css/style-starter.css
@@ -11179,3 +11179,12 @@ span.sicon {
     height: 150px; } }
 
 /*# sourceMappingURL=style-starter.css.map */
+
+
+
+
+/* START | ADDED BY ABHILASH */
+.portfolio-p-header {
+  font-size: 1.4rem;
+}
+/* END | ADDED BY ABHILASH */
